changed img source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id = "box">
         <div id = "header">
             <div class = "ah">
-                <image src = '/aahhhh.jpeg' id = "img"></image>
+                <image src = 'https://nithin-gith.github.io/another-shitty-site/aahhhh.jpeg' id = "img"></image>
                 <div id="readme"> 
                     <a href="https://github.com/nithin-gith" target = "__blank" class = "link">nithin-gith</a>
                     <span class = "slash"> / </span> 
