--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <hr class = "hr">
             <div class = "about">
                 <div><a class = "text linn" href = 'https://github.com/nithin-gith/another-shitty-site' target="__blank">Source </a><span class = "bold text">(1 hr is all it takes, coding up this page)</span></div>
-                <div class = "text last"> <span class = "text bold">P.S : </span>This page works same in 1994 (Happy times! pre JS) I already said, I am noob ;-;</div>
+                <div class = "text last"> <span class = "text bold">P.S : </span>This page works same in 1994 (pre JS :) I already said, I am noob ;-;</div>
             </div>
         </div>
     </div>
