--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
             <h1 class = "name">Nithin Siriguppa</h1>
             <hr class = "hr">
             <div class = "text">I am  <span class = "bold">Nithin Siriguppa</span> </div>
-            <div class = "text">I am a third year undergraduate at IIT Kharagpur</div>
+            <div class = "text">I am a final year undergraduate at IIT Kharagpur</div>
             <div class = "text bold">What i read here ?</div>
             <ul>
                 <li class = "white"><div class="text">Chemical Engineering <span class = "bold">(DON'T ASK ME WHY)</span></div></li>
-                <li class = "white"><div class="text">Instagram comments <span class = "bold">(IF THAT COUNTS)</span></div></li>
+                <li class = "white"><div class="text">Instagram comments </div></li>
             </ul>
             
             <div class = "text bold">What i do here ?</div>
             <ul>
-                <li class = "white"><div class="text">Eat lot of junk <span class = "bold">(not tasty tho, c'mon it is kgp)</span> </div></li>
-                <li class = "white"><div class="text">Walk N x 2.2 kms/day <span class = "bold">(with music obviously)</span></div></li>
+                <li class = "white"><div class="text">Eat junk </div></li>
+                <li class = "white"><div class="text">Walk N x 2.2 kms/day </div></li>
                 <li class = "white"><div class="text">Watch some movies and TV series <span class = "bold">(Mostly i stop after half)</span></div></li>
-                <li class = "white"><div class="text">Also, I code sometimes <span class = "bold">(noob tho)</span></div></li>
+                <li class = "white"><div class="text">Also, I code sometimes <span class = "bold">(noob)</span></div></li>
 
             </ul>
-            <h2 class = "h2">Wanna stalk me?</h2>
+            <h2 class = "h2">stalk me?</h2>
             <hr class = "hr">
             <div><a class = "text linn" href = 'https://bit.ly/nithi-cv' target="__blank">CV</a></div>
             <div><a class = "text linn" href = 'https://github.com/nithin-gith' target="__blank">GitHub</a></div>
-            <div><a class = "text linn" href = 'https://www.linkedin.com/in/nithin-siriguppa/' target="__blank">Linkedin </a><span class = "bold text">(LOL you will find nothing here)</span></div>
+            <div><a class = "text linn" href = 'https://www.linkedin.com/in/nithin-siriguppa/' target="__blank">Linkedin </a><span class = "bold text">(you will find nothing here)</span></div>
 
-            <div><a class = "text linn" href = 'https://instagram.com/nithin_siriguppa' target="__blank">Instagram </a><span class = "bold text">(spamm!!)</span></div>
-            <div><a class = "text linn" href = 'https://www.facebook.com/nithin.siriguppa' target="__blank">Facebook </a> <span class = "bold text">(for age > 35)</span></div>
+            <div><a class = "text linn" href = 'https://instagram.com/nithin_siriguppa' target="__blank">Instagram </a></div>
+            <div><a class = "text linn" href = 'https://www.facebook.com/nithin.siriguppa' target="__blank">Facebook </a> </div>
             <!-- <br> -->
             <hr class = "hr">
             <div class = "about">
-                <div><a class = "text linn" href = 'https://github.com/nithin-gith/another-shitty-site' target="__blank">Source </a><span class = "bold text">(1 hr is all it takes, coding up this page)</span></div>
-                <div class = "text last"> <span class = "text bold">P.S : </span>This page works same in 1994 (pre JS :) I already said, I am noob ;-;</div>
+                <div><a class = "text linn" href = 'https://github.com/nithin-gith/another-shitty-site' target="__blank">Source</a><span class = "bold text"> (1 hr is all it takes, coding up this page)</span></div>
+                <div class = "text last"> </div>
             </div>
         </div>
     </div>
